# chiwawa

./: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  colors.scss  main.ts  styles.scss  types.ts  utilities.ts
src-tauri/: Cargo.toml  _app.json  app.json  library.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: chi_models.rs  http_client.rs  main.rs  store.rs
src/inputs/: Button.svelte  Dropdown.svelte  Editor.svelte  Textbox.svelte  types.ts
src/layout/: Materialistic.svelte  Tabbable.svelte  types.ts
src/navigation/: MainNav.svelte
src/service/: config-service.ts
